https://online.sbis.ru/opendoc.html?guid=bf50507d-1dce-44f2-b392-1491a7bf5e8a

--- a/Controls-default-theme/aliases/_breadcrumbs.less
+++ b/Controls-default-theme/aliases/_breadcrumbs.less
@@ -74,6 +74,8 @@
 @back_editButton_readonly_icon-color_breadcrumbsHeadingPath:           @readonly_color;
 @back_counter_offset_breadcrumbsHeadingPath:                           4px;
 
+@font-size_headingPathBack_headingBack:                                @font-size_3xl;
+
 
 
 
