https://online.sbis.ru/opendoc.html?guid=7195e20d-1a04-4594-9e6a-34df7012f7b9

--- a/Controls-default-theme/aliases/_treeGrid.less
+++ b/Controls-default-theme/aliases/_treeGrid.less
@@ -53,6 +53,8 @@
 
 @node-footer_max-font-size_treeGrid:                              @font-size_m;
 @node-footer_more_font-size_treeGrid:                             @font-size_l;
+@node-footer_min-heght:                                           25px;
+@node-footer_padding-top-s:                                       2px;
 
 //Драг н дроп
 
@@ -64,8 +66,3 @@
 @node_font-size_treeGrid:                                         @font-size_2xl;
 @hidden-node_font-size_treeGrid:                                  @font-size_xl;
 @leaf_font-size_treeGrid:                                         @item_font-size_m_grid;
-
-// Подвал ноды
-
-@footer-node_min-heght:                                           25px;
-@footer-node_padding-top-s:                                       2px;
