--- a/Controls/_treeGrid/TreeGridView/_TreeGridView.less
+++ b/Controls/_treeGrid/TreeGridView/_TreeGridView.less
@@ -50,11 +50,6 @@
       padding-bottom: @item_padding-bottom_s_grid - 1;
    }
 }
-.controls-TreeGrid__nodeFooterContent_theme-@{themeName} {
-   .controls-TreeGrid__row-expander_theme-@{themeName}, .controls-TreeGrid__row-expanderPadding_theme-@{themeName} {
-      min-height: 0;
-   }
-}
 
 .controls-TreeGrid__row-expander_theme-@{themeName}, .controls-TreeGrid__row-expanderPadding_theme-@{themeName} {
    line-height: 1;
@@ -63,6 +58,15 @@
    min-height: @expander_height_treeGrid;
    min-width: @expander_width_treeGrid;
 }
+
+.controls-TreeGrid__node-footer-expanderPadding_theme-@{themeName} {
+   line-height: 1;
+   display: inline-block;
+   position: relative;
+   min-height: 0;
+   min-width: @expander_width_treeGrid;
+}
+
 .controls-TreeGridView__dragTargetNode_theme-@{themeName} {
    border-top: @item_droppable_border_thickness_treeGrid solid @item_droppable_border_color_treeGrid;
    border-bottom: @item_droppable_border_thickness_treeGrid solid @item_droppable_border_color_treeGrid;
@@ -173,12 +177,12 @@
 .controls-TreeGrid__nodeFooterContent_theme-@{themeName} {
    display: inline-flex;
    align-items: baseline;
-   min-height: @footer-node_min-heght;
+   min-height: @node-footer_min-heght;
    box-sizing: border-box;
    border-top-style: solid;
 }
 .controls-TreeGrid__nodeFooterContent_padding-top-s_theme-@{themeName} {
-   padding-top: @footer-node_padding-top-s;
+   padding-top: @node-footer_padding-top-s;
 }
 .controls-TreeGrid__nodeFooterContent_padding-top-l_theme-@{themeName} {
    padding-top: 0;
