https://online.sbis.ru/doc/032e8589-0104-4bca-9bf3-6c88a15581aa

--- a/Controls-default-theme/aliases/_list.less
+++ b/Controls-default-theme/aliases/_list.less
@@ -161,6 +161,8 @@
 @item_edge_separator_l_color_list:                                  #F3F3F3;
 @item_separator_s_color_list:                                       #F5F5F5;
 @item_separator_l_color_list:                                       #F3F3F3;
+@column_separator_s_color_list:                                     #EAEAEA;
+@column_separator_s_thickness_list:                                 1px;
 
 
 
