--- a/Controls-default-theme/dark/_aliases.less
+++ b/Controls-default-theme/dark/_aliases.less
@@ -188,6 +188,7 @@
 //List
 @item_separator_s_color_list:                                                 #4a515a;
 @item_edge_separator_s_color_list:                                            #6b6b6b;
+@column_separator_s_color_list:                                               #6b6b6b;
 
 @master_item_background-color_list:                                         #30343b;
 @master_item_selected_background-color_list:                                #424851;
