--- a/Controls/_grid/_Grid.less
+++ b/Controls/_grid/_Grid.less
@@ -1,3 +1,4 @@
 @import "./layout/common/_RowSeparator";
+@import "./layout/common/_ColumnSeparator";
 @import "./layout/grid/_Grid";
 @import "./layout/table/_Table";
