--- a/Controls/_moverDialog/BaseTemplate/_BaseTemplate.less
+++ b/Controls/_moverDialog/BaseTemplate/_BaseTemplate.less
@@ -1,4 +1,4 @@
-.controls-MoveDialog {
+.controls-MoveDialog_theme-@{themeName} {
   width: @width_MoveDialog;
   height: @height_MoveDialog + @header-min-height_dialog;
 }
