--- a/Controls/_moverDialog/Template/_Template.less
+++ b/Controls/_moverDialog/Template/_Template.less
@@ -4,7 +4,7 @@
    height: 100%; // max-height: 100% в IE не работает
 }
 
-.controls-MoveDialog__search {
+.controls-MoveDialog__search_theme-@{themeName} {
    width: @search_width_MoveDialog;
    margin-bottom: @header_padding-vertical_MoveDialog;
    margin-top: @header_padding-vertical_MoveDialog;
@@ -15,7 +15,7 @@
 .controls-MoveDialog__scroll {
    height: 100%;
 }
-.controls-MoveDialog__root {
+.controls-MoveDialog__root_theme-@{themeName} {
    margin-left: @root_offset_MoveDialog;
    margin-top: @root_padding-vertical_MoveDialog;
    margin-bottom: @root_padding-vertical_MoveDialog;
